--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "fontawesome": "^5.6.3",
+    "formik": "^2.4.6",
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
